--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,3 +13,17 @@ layout: default
   </article>
 
 </div>
+
+  <div class="wrapper">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- cjdesch.com -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2634767133464198"
+     data-ad-slot="7667016084"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+</div>
