--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,4 +53,15 @@
 
   </div>
 
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- cdjesch footer -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2634767133464198"
+     data-ad-slot="3598352484"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 </footer>
